--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = cities[11].ke\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
